objects/Bed__c.object
<CustomObject>
    <label>Bed</label>
    <nameField>
        <label>Bed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Beds</relationshipLabel>
        <relationshipName>Beds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Room_Name__c</fullName>
        <label>Room Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>